@@ -1,3 +1,7 @@
+2007-06-26  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclVar.c (UnsetVarStruct): more streamlining.
+
 2007-06-25  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclExecute.c:	Safety checks to avoid crashes in the
